# custom-git-hook

./: .pre-commit-hooks.yaml  control-hooks-1.sh  control-hooks-2.sh  control-hooks.sh  pyproject.toml  refs_control.sh  type_control.sh
