[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
[project]
name = "custom-git-hook"
description = "My package description"
readme = "README.md"
dynamic = ["version"]
[project.scripts]
control-hooks = "refs_control.sh"
control-hooks1 = "type_control.sh"
