[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
[project]
name = "custom-git-hook"
description = "My package description"
readme = "README.md"
dynamic = ["version"]
[project.scripts]
refs_control = "refs_control.sh"
type_control = "type_control.sh"
